# hospwork-web

./: README.md  pyproject.toml
.idx/: dev.nix
src/: index.html
