[tool.poetry]
name = "hospwork-flask"
version = "0.1.0"
description = "Start a simple web app with the Flask framework for Python"
authors = ["Google LLC"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.1"
jinja2 = "^3.1.1"
firebase-admin = "^6.8.0"
google-adk = "^1.0.0"
python-dotenv = "^1.1.0"

[tool.poetry.scripts]
app = 'src.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
